This code is properly working on the board
tested using
make -> flash.sh
and
apio build -> flash.sh (flash.sh needs editing to select the correct .bin file)

--- a/up5k_blink/Makefile
+++ b/up5k_blink/Makefile
@@ -14,7 +14,7 @@ all: $(PROJ).bin
 	yosys -p 'synth_ice40 -top top -blif $@' $<
 
 %.asc: $(PIN_DEF) %.blif
-	$(ARACHNE) $(ARACHNE_ARGS) -d $(subst up,,$(subst hx,,$(subst lp,,$(DEVICE)))) -o $@ -p $^
+	$(ARACHNE) $(ARACHNE_ARGS) -d $(subst up,,$(subst hx,,$(subst lp,,$(DEVICE)))) -o $@ -p $^ -P sg48
 
 %.bin: %.asc
 	$(ICEPACK) $< $@
